minor code cleanup